--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,12 +1,8 @@
 name: Build and Publish Docker Image
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - v*
-
+  workflow_dispatch:
+  
 jobs:
   main:
     runs-on: ubuntu-latest
